# ibkr-portfolio-bot

./: .cursorrules  .env.example  .gitignore  52_WEEK_BACKTEST_SUMMARY.md  AUTOMATION_COMPLETE.md  BACKTEST_RESULTS.md  BUG_HUNT_REPORT.md  CHANGELOG.md  Dockerfile  Makefile  OPERATIONAL_CHECKLIST.md  PORTFOLIO_RISK_ANALYSIS.md  PROJECT_STATUS.md  QA_REPORT.md  README.md  SENTIMENT_MOMENTUM_STRATEGY.md  SENTIMENT_YOLO_PLAN.md  STRATEGY_COMPARISON.md  TODO.md  ULTIMATE_STRATEGY_RESULTS.md  UNIVERSE_25_BREAKDOWN.md  YOLO_QUICKSTART.md  docker-compose.yml  pyproject.toml
.metagross/: instruction-1762821304469.md  instruction-1762821329724.md  instruction-1762821496718.md  instruction-1762821603439.md  instruction-1762821664579.md  instruction-1762821766033.md  instruction-1762821850250.md  instruction-1762822593140.md  instruction-1762823957744.md  instruction-1762825318670.md  instruction-1762825681416.md  instruction-1762826840202.md  instruction-1762828346998.md  instruction-1762829853629.md  instruction-1762831357299.md  instruction-1762831361674.md  instruction-1762832699678.md  instruction-1762834205584.md  instruction-1762835711601.md  instruction-1762837978732.md  instruction-1762838010146.md  instruction-1762840007725.md  prompt-source.txt
config/: config.local.yaml.example  config_25_assets.yaml  config_30_defensive.yaml  config_9_assets_backup.yaml
deployment/: install-scheduler.sh  portfolio-rebalance.service  portfolio-rebalance.timer  uninstall-scheduler.sh
docs/: INSTITUTIONAL_STRATEGIES.md  README.md
scripts/: backtest_52_weeks.py  backtest_52_weeks_simple.py  backtest_advanced_institutional.py  backtest_advanced_quant.py  backtest_degen_mode.py  backtest_dual_momentum.py  backtest_forensic.py  backtest_hybrid_institutional.py  backtest_institutional.py  backtest_low_turnover.py  backtest_quant_lab.py  backtest_real_data.py  backtest_sticky_momentum.py  backtest_ultimate_strategy.py  backtest_yolo_lab.py  compare_universes.py  download_real_data.py  (+1 more)
src/: cli.py
(+74 files in other folders)
